# MinerPick

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  requirements.txt  setup.py
backend/: README.md  config.py  main.py  pyproject.toml
backend/parsers/: __init__.py  base.py  fullParse_mineru.py  fullParse_pymupdf.py  tableExtractor_gmft.py
backend/static/: index.html
backend/static/assets/: index-9JrQ3PSh.css  index-B3U6xAnA.js  index-B74TcW80.js  index-BF6eYHbL.js  index-BJCNPUBl.css  index-BdbO-vn6.css  index-CWsFZzHd.css  index-CqJ1cZEP.css  index-DjfVnFA3.js  index-DsyM7WtE.js
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/src/components/: MarkdownViewer.vue  PdfViewer.vue
frontend/src/composables/: useConversion.ts  useResizer.ts
frontend/src/locales/: en.json  zh.json
