[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmirror"
version = "0.1.0"
description = "PDF to Markdown Mirror - A high-precision PDF conversion tool"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "gmft",
    "transformers",
    "torch",
    "opencv-python"
]

[project.scripts]
pdfmirror = "main:start"
